fixed some bugs related to safari on iphones (hopefully!), adjusted style of front page to be less cramped, changed some stylings around on the bars and such

--- a/src/barsandbuttons.css
+++ b/src/barsandbuttons.css
@@ -10,22 +10,22 @@
   }
 
   .logo {
-    padding-left: 20px;
-    height: 100px;
+    /* padding-left: 20px;
+    height: 100px; */
     width: 200px;
   }
   
   .topbarMain {
     display: flex;
     -ms-flex-pack: justify;
-    justify-content: space-between;
+    justify-content: center;
     position: fixed;
     top: 0;
     width: 100%;
     z-index: 10;
     padding-top: 5px;
     padding-bottom: 10px;
-    height: 75px;
+    height: 100px;
   }
 
   .topbarTransparent {
@@ -96,16 +96,19 @@
 
 
   .hamburgerButton {
-    position: fixed;
-    bottom: 75px;
-    right: 15px;
+    position: absolute;
+    top: 5px;
+    left: 20px;
     z-index: 10;
-    width: 50px !important;
-    height: 50px !important;
-    border-radius: 50% !important;
-    background-color: #3364b7 !important;
-    font-size: 25px !important;
+    width: 80px !important;
+    height: 80px !important;
+    background-color: rgb(25,25,25) !important;
+    font-size: 45px !important;
     z-index: 100 !important;
+    border: none !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   .hamburgerMenuButton {
@@ -120,7 +123,7 @@
     background-color: rgb(25,25,25);
     position: fixed;
     left: 0px;
-    top: 70px;
+    top: 95px;
     opacity: 0.95;
     z-index: 15;
   }
@@ -256,6 +259,7 @@
     .topbarMain {
         padding-bottom: 5px; 
         padding-top: 5px; 
+        height: 120px;
     }
     
     .logo {
@@ -266,16 +270,21 @@
 
 @media (min-width: 600px){
   
-  .hamburgerButton {
+  /* .hamburgerButton {
     position: fixed;
-    bottom: 120px;
-    right: 50px;
+    top: 10px;
+    right: 2%;
     z-index: 10;
-    width: 100px !important;
-    height: 100px !important;
-    border-radius: 50% !important;
-    background-color: #3364b7 !important;
-    font-size: 45px !important;
-  }
+    width: 80px !important;
+    height: 80px !important;
+    border-radius: 50% !important; 
+   background-color: rgb(25,25,25) !important; 
+    font-size: 60px !important;
+    z-index: 100 !important;
+    border: none !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  } */
 }
 
