--- a/src/frontpage.css
+++ b/src/frontpage.css
@@ -55,6 +55,7 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
+    margin-top: 100px;
   }
 
   .centerAlignerText {
